[package]
name = "rustaman"
version = "0.1.0"
authors = ["codejitsu <me@codejitsu.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
env_logger = "0.7.1"
log = "0.4.11"
termion = "1.5.5"
git2 = "0.12.0"
console = "0.12.0"